# rust_mcp_sdk

./: .gitignore  Cargo.toml  DEBUG_CLIENT_CONNECTIONS.md  README.md  WARP_SETUP.md  debug_client_connections.rs  mcp_config.json  test_debug_client.sh
.github/workflows/: ci.yml
docs/: MIGRATION_PLAN.md  SDK_DESIGN.md  client_server_flow.md  dependency_mapping.md  notes.md  project_plan.md
examples/: README.md  simple_client.rs  simple_resource.rs  simple_tool.rs
examples/context/: Cargo.toml  README.md
examples/context/src/: database.rs  main.rs  models.rs  services.rs
examples/debug_client/: Cargo.toml
examples/debug_client/src/: main.rs
examples/group-client/: Cargo.toml
examples/group-client/src/: main.rs
examples/notification_client/: Cargo.toml
examples/notification_client/src/: main.rs
examples/prompt_client/: Cargo.toml
examples/prompt_client/src/: main.rs
examples/simple_client/: Cargo.toml
examples/simple_client/src/: main.rs
examples/simple_server/: Cargo.toml
examples/simple_server/src/: main.rs
examples/unsafe_sql_server/: Cargo.toml  README.md
examples/unsafe_sql_server/src/: main.rs
mcp_sdk_macros/: Cargo.toml
mcp_sdk_macros/src/: lib.rs
schemas/2024-11-05/: schema.json
scripts/: README.md  collect_schema.sh
src/: adapter.rs  client.rs  common.rs  error.rs  lib.rs  protocol.rs  server.rs  types.rs
src/adapters/: client_tcp.rs  mod.rs  server_tcp.rs
src/client/: client.rs  mod.rs  session.rs  session_group.rs
src/network_adapter/: lsp.rs  mod.rs  ndjson.rs  stdio.rs  trait.rs
src/server/: mod.rs  server.rs  session.rs
tests/: basic.rs  full_e2e.rs  tool_arguments_derive_tests.rs  typed_tool_integration_tests.rs
