[package]
name = "mcp-sdk"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"
description = "A Rust implementation of the Model Context Protocol (MCP) SDK."
readme = "README.md"
license = "MIT"

[workspace]
members = [
  ".",
  "examples/debug_client",
  "examples/group-client",
  "examples/notification_client",
  "examples/prompt_client",
  "examples/simple_client",
  "examples/simple_server",
  "examples/unsafe_sql_server",
]

[dependencies]
async-trait = "0.1"
# Add dashmap for concurrent request tracking
dashmap = "5.5.3"
jsonschema = { version = "0.30.0", optional = true }
# reqwest will pull in once_cell if schema-validation is enabled.
# The ToolArguments macro always needs once_cell, so make it a direct dependency.
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
mcp_sdk_macros = { path = "./mcp_sdk_macros", version = "0.1.0" }
once_cell = "1.19" # Now a direct, non-optional dependency


[features]
default = []
schema-validation = ["dep:jsonschema", "dep:reqwest"] # once_cell is now a direct dependency
