[package]
name = "mcp_sdk_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.101", features = ["full", "parsing"] } # Specify recent version
quote = "1.0"
proc-macro2 = "1.0"
serde_json = "1.0" # For constructing json! within quoted code
once_cell = "1.19" # For Lazy initialization of schema
