[package]
name = "database-context-example"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"], optional = true }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
async = ["tokio"]

[[bin]]
name = "database_example"
path = "src/main.rs"
