[package]
name = "simple-client-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Add clap for command-line argument parsing
clap = { version = "4.5.4", features = ["derive"] }
mcp-sdk = { path = "../.." }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
