[package]
name = "unsafe-sql-server-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# For parsing command-line arguments
clap = { version = "4.5", features = ["derive"] }
# The main SDK crate, referenced from the parent directory
mcp-sdk = { path = "../../" }
# The SQLite driver. The "bundled" feature makes installation easier
# as it compiles a local version of SQLite instead of relying on a system-wide one.
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde_json = "1.0"
# The async runtime
tokio = { version = "1", features = ["full"] }
